--- a/the-aurum-almanac.mdx
+++ b/the-aurum-almanac.mdx
@@ -9,20 +9,15 @@ title: 'Aurum Almanac'
 
 *Hark! Noble seekers of prosperity and innovation, welcome to the golden realm of Aurum.*
 
-*As alchemists of old sought to transmute base metals into gold, so too does the Aurum Protocol transform the very nature of lending and borrowing in the digital age. Here within these pages lies the wisdom of a new financial paradigm—one where loans diminish of their own accord and the sword of liquidation no longer hangs above the borrower's head.*
+You know how traditional loans work? You borrow money, you stress about repayments, you worry about liquidation. We threw that playbook out the window.
 
-*This Almanac serves as both map and compass for navigating the sovereign territory of self-repaying finance. Whether you be a humble trader seeking liquidity or a learned developer crafting integrations, may these chronicles illuminate your path.*
+With Aurum, your loan pays itself back. Seriously.
 
-*Proceed now through these hallowed sections, where the architecture of Aurum is laid bare with clarity and precision. Witness how yield becomes liberation from debt, how risk is managed with prudence, and how our realm shall grow in the seasons to come.*
+Here's what we built: You deposit SOL, borrow against it, and the yield from your deposit chips away at your debt. No liquidation. No stress. Just math working in your favor.
 
-*The golden age of finance awaits those bold enough to grasp it.*
+This guide walks you through everything: how it works, what makes it safe, and where we're headed. Whether you're a trader looking for liquidity or a developer building on top of us, you'll find what you need here.
 
----
+The Aurum Protocol changes how lending works on Solana. We connect your deposited SOL to Drift's yield vaults, and that yield automatically reduces your debt over time. You can't get liquidated. Ever.
 
-The Aurum Protocol reimagines lending on Solana through a revolutionary self-repaying mechanism. By channeling yield from deposited SOL through Drift's battle-tested vaults, borrowers watch their debt diminish automatically over time—without liquidation risk.
+We're documenting everything as we build. From the technical guts to the economics, this almanac shows you exactly how Aurum works and why it matters.
 
-This document provides essential information for understanding Aurum's design, mechanics, and roadmap as we prepare for deployment. From technical architecture to user economics, the Aurum Almanac offers a comprehensive overview of our protocol's foundation and vision.
-
-As we pursue grants and strategic partnerships, particularly with Drift, this documentation demonstrates the careful planning and innovation behind Aurum's approach to decentralized finance.
-
-Welcome to the future of self-repaying loans.
