--- a/protocol-summary.mdx
+++ b/protocol-summary.mdx
@@ -2,36 +2,26 @@
 title: 'Protocol Summary'
 ---
 
-*Hearken, noble investors and seekers of prosperity! The Aurum Protocol presents a golden opportunity in the realm of decentralized finance.*
+## What is Aurum?
+Aurum gives you self-repaying loans. You deposit SOL, borrow aurSOL, and watch your debt shrink automatically. No extra payments needed.
 
-## Core Concept
-
-Aurum introduces self-repaying loans through automated yield generation on Solana. This innovative mechanism allows borrowers to leverage their assets while watching their debt diminish over time—without additional capital injection.
-
-At its essence, Aurum enables users to:
+Here's the simple version:
 
 - Deposit SOL as collateral
-- Borrow aurSOL (up to 50% of collateral value)
-- Watch as generated yield automatically pays down their loan balance
+- Borrow up to 50% of that value in aurSOL
+- The yield from your SOL pays down your loan
 
-## Key Mechanism
+## How It Actually Works
 
-The sovereign engine of Aurum operates through a carefully orchestrated process:
+Think of it like this: You put 100 SOL in a vault. That SOL goes to work in Drift's yield strategies. You can borrow 50 SOL worth of aurSOL right away. The yield your deposit generates? 80% goes straight to paying down your loan. The other 20% keeps the protocol running.
 
-1. **Collateral Deposits**: Users deposit SOL into Aurum's secure vaults
-2. **Yield Generation**: Deposited SOL is allocated to Drift's yield-generating vaults
-3. **Automated Repayment**: 80% of yield is systematically applied to reduce the user's outstanding debt
-4. **Protocol Sustainability**: The remaining 20% of yield supports protocol operations and development
+Your debt gets smaller every day without you lifting a finger.
 
-This creates a virtuous cycle where borrowers benefit from capital access while their debt burden lightens over time.
+## Why Aurum Beats Traditional Lending
 
-## Unique Value Proposition
-
-Aurum stands apart from traditional lending protocols through several distinct advantages:
-
-- **No Liquidation Risk**: The 200% collateralization minimum and self-repaying nature eliminate the threat of liquidation
-- **True Passive Income**: Borrowers enjoy declining debt without active management
-- **Capital Efficiency**: Access to 50% of deposited value while maintaining full exposure to SOL's potential appreciation
-- **Simplified DeFi Experience**: Complex yield strategies managed automatically beneath a simple interface
-
-As the Solana ecosystem continues to flourish, Aurum provides a secure harbor where users can navigate the seas of DeFi with confidence and strategic advantage.
+Let me count the ways:
+- You can't get liquidated. With 200% collateralization and automatic debt reduction, liquidation isn't even in the code.
+- Your loan shrinks on its own. Remember that friend who borrowed $20 and never paid you back? This is the opposite of that.
+- You get cash now while keeping your SOL. Need liquidity but think SOL is going up? Perfect. Borrow against it without selling.
+- It just works. No managing positions, no watching health factors, no 3am liquidation nightmares.
+- Traditional lending makes you the hamster on the wheel. With Aurum, the wheel spins itself.
