--- a/competitive-advantage.mdx
+++ b/competitive-advantage.mdx
@@ -1,49 +1,57 @@
 ---
-title: 'Competitive Advantage'
+title: 'Why Aurum?'
 ---
-## Market Differentiation
 
-*In the bustling marketplace of decentralized finance, Aurum stands as a beacon of innovation and security.*
+## How We're Different
 
-Aurum creates distinct value compared to existing DeFi protocols through several key advantages:
+Let's compare Aurum to what's out there:
 
-### Compared to Traditional Lending Protocols:
+### vs. Traditional Lending (Solend, Kamino, etc.)
 
-- **No Liquidation Risk**: While platforms like Solend and Mango Markets require constant monitoring of health factors, Aurum eliminates the threat of liquidation entirely.
-- **Automatic Debt Reduction**: Traditional lending requires manual repayments, while Aurum's loans pay themselves down over time.
-- **Simplified User Experience**: Complex parameters like interest rates, utilization curves, and liquidation thresholds are replaced with straightforward deposit and borrow mechanics.
+They make you watch health factors like a hawk. One bad day and you're liquidated.
 
-### Compared to Yield Aggregators:
+We don't do liquidations. Your loan pays itself back. You sleep better.
 
-- **Capital Access**: Unlike pure yield platforms that lock up capital, Aurum provides immediate access to 50% of deposited value while still generating returns.
-- **Optimized for SOL Holders**: Specifically designed for users who want to maintain SOL exposure while accessing liquidity.
-- **Strategic Yield Application**: Automatic allocation of returns to debt reduction creates a compelling compound effect.
+They need constant management. Check rates, manage positions, repay manually.
 
-## Technical Advantages
+We're set-and-forget. Deposit once, debt shrinks automatically.
 
-Aurum leverages Solana's unique capabilities and integrates with battle-tested infrastructure:
+### vs. Yield Platforms
 
-- **Solana's Performance**: Ultra-low transaction costs and high throughput enable efficient operations even with frequent yield harvesting and debt adjustments.
-- **Drift's Proven Vaults**: Integration with Drift's established vault system brings reliability and optimized yield generation.
-- **Modular Architecture**: Purpose-built components for deposit management, yield generation, and debt reduction create a robust and maintainable system.
-- **Security-First Design**: Conservative parameters and multiple safeguards prioritize capital preservation.
+Yield aggregators lock up your capital. Want to access it? Withdraw everything.
 
-## User-Centric Benefits
+We give you 50% liquidity immediately while your collateral still earns. Best of both worlds.
 
-The protocol's design centers on delivering tangible advantages to users:
+## Technical Edge
 
-- **True Passive Income**: Once a position is established, no further user action is required as the debt automatically decreases.
-- **Hedging Capability**: Access to aurSOL liquidity enables users to manage market exposure while maintaining collateralized SOL positions.
-- **Psychological Comfort**: The elimination of liquidation risk removes a significant source of stress for borrowers.
-- **Flexible Time Horizons**: Without fixed terms or mandatory repayment schedules, users can maintain positions for as long as beneficial.
+We picked Solana for a reason:
 
-## Strategic Partnership
+**Cheap and fast.** Penny transactions mean we can harvest yield and update positions constantly without eating into returns.
 
-The integration with Drift provides substantial mutual benefits:
+**Best-in-class integrations.** We connect to proven yield sources like Marginfi, Kamino, and others. Why build from scratch when giants already exist?
 
-- **Established Infrastructure**: Leveraging Drift's battle-tested vault system reduces development time and technical risk.
-- **Complementary Services**: Aurum's focus on self-repaying loans fills a gap in Drift's ecosystem offering.
-- **Shared User Base**: Natural alignment between Drift users seeking additional utility and Aurum's target audience.
-- **Technical Synergy**: Combined expertise in Solana development and DeFi mechanics accelerates innovation.
+**Clean architecture.** Separate modules for deposits, yields, and debt. Easier to audit, harder to break.
 
-As the DeFi landscape continues to evolve, Aurum's unique combination of user-friendly mechanics, security-focused design, and strategic integration with Drift positions it to capture significant market share in the self-repaying loan segment.
+## Built for Humans
+
+Here's what users actually care about:
+
+**Real passive income.** Not "check back daily" passive. Actually passive.
+
+**Flexibility.** Need to hedge? Use your aurSOL. Market pumping? Your SOL is still yours.
+
+**Peace of mind.** No liquidation = no 3am anxiety.
+
+**No deadlines.** Keep your position as long as you want. Close it when you want.
+
+## Why Multi-Protocol Strategy Works
+
+We're not tied to one yield source. That's our superpower:
+
+**Diversification built in.** Your SOL works across multiple protocols. One has issues? The others keep earning.
+
+**Optimization opportunities.** We can shift allocations to wherever yield is best.
+
+**Partnership friendly.** We make every integrated protocol better by bringing them users.
+
+**Future proof.** New yield source launches? We can integrate it.
