--- a/technical-architecture.mdx
+++ b/technical-architecture.mdx
@@ -13,7 +13,7 @@ Aurum runs on three main parts that work together like a Swiss watch:
 ## Safety First (Actually)
 
 We built this thing to survive anything:
-- 200% collateralization minimum. You need $200 of SOL to borrow $100. That's a huge cushion against price swings.
+- 200% collateralization minimum. You need 200 USD of SOL to borrow 100. That's a huge cushion against price swings.
 - Two oracle sources. We use both Switchboard and Pyth. If one goes wonky, the other catches it. No flash crash disasters here.
 - Automatic circuit breakers. If things get weird, the protocol pauses. Better safe than sorry.
 - No surprise changes. Protocol parameters only change through governance. No rug pulls, no "oops we changed the rules."
