--- a/technical-architecture.mdx
+++ b/technical-architecture.mdx
@@ -8,7 +8,7 @@ Aurum runs on three main parts that work together like a Swiss watch:
 
 - The Vault Controller is the brain. It handles your deposits, tracks your position, and makes sure aurSOL gets minted when you borrow. Think of it as the bouncer, the accountant, and the manager all rolled into one smart contract.
 - Position Management keeps tabs on everyone. Your collateral, your debt, your accumulated yield, it's all tracked here. Every Satoshi accounted for.
-- The Yield Capture System is where the magic happens. It talks to Drift's vaults, grabs your yield, and splits it: 80% to pay your debt, 20% to keep the lights on.
+- The Yield Capture System is where the magic happens. It talks to yield generating vaults, grabs your yield, and splits it: 80% to pay your debt, 20% to keep the lights on.
 
 ## Safety First (Actually)
 
