--- a/protocol-summary.mdx
+++ b/protocol-summary.mdx
@@ -13,7 +13,7 @@ Here's the simple version:
 
 ## How It Actually Works
 
-Think of it like this: You put 100 SOL in a vault. That SOL goes to work in Drift's yield strategies. You can borrow 50 SOL worth of aurSOL right away. The yield your deposit generates? 80% goes straight to paying down your loan. The other 20% keeps the protocol running.
+Think of it like this: You put 100 SOL in a vault. That SOL goes to work in yield strategies you select. You can borrow 50 SOL worth of aurSOL right away. The yield your deposit generates? 80% goes straight to paying down your loan. The other 20% keeps the protocol running.
 
 Your debt gets smaller every day without you lifting a finger.
 
