--- a/the-aurum-almanac.mdx
+++ b/the-aurum-almanac.mdx
@@ -17,7 +17,7 @@ Here's what we built: You deposit SOL, borrow against it, and the yield from you
 
 This guide walks you through everything: how it works, what makes it safe, and where we're headed. Whether you're a trader looking for liquidity or a developer building on top of us, you'll find what you need here.
 
-The Aurum Protocol changes how lending works on Solana. We connect your deposited SOL to Drift's yield vaults, and that yield automatically reduces your debt over time. You can't get liquidated. Ever.
+The Aurum Protocol changes how lending works on Solana. We connect your deposited SOL to yield vaults, and that yield automatically reduces your debt over time. You can't get liquidated. Ever.
 
 We're documenting everything as we build. From the technical guts to the economics, this almanac shows you exactly how Aurum works and why it matters.
 
